fix(flag_manager): fix overflow issue and only show "root" words

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,5 @@
   margin: 0;
   text-align: center;
   background-color: oklch(var(--b3));
-  overflow: auto;
   height: 100svh;
 }
